Finished Ban command

--- a/src/main/resources/languages/LANG_ENG.yml
+++ b/src/main/resources/languages/LANG_ENG.yml
@@ -7,3 +7,5 @@ BAN_MESSAGE: |-
     §7Ban-ID: §f%BAN_ID%
 
 BANNED_PLAYER_TRIED_TO_JOIN: '§6%PLAYER% §7tried to join, but they are banned!'
+
+PLAYER_DOESNT_EXIST: "§cThis player does not exist."
