Mute Commands and listener

--- a/src/main/resources/languages/LANG_ENG.yml
+++ b/src/main/resources/languages/LANG_ENG.yml
@@ -9,5 +9,8 @@ BAN_MESSAGE: |-
 BANNED_PLAYER_TRIED_TO_JOIN: '§6%PLAYER% §7tried to join, but they are banned!'
 PLAYER_PERMANENTLY_BANNED: '§6%PLAYER% §7has been banned by §6%EXECUTOR% §7for §c"%REASON%"'
 PLAYER_TEMPORARILY_BANNED: '§6%PLAYER% §7has been banned by §6%EXECUTOR% §7for §c"%REASON%" §7for §c%TIME%'
+PLAYER_PERMANENTLY_MUTED: '§6%PLAYER% §7has been muted by §6%EXECUTOR% §7for §c"%REASON%"'
+PLAYER_TEMPORARILY_MUTED: '§6%PLAYER% §7has been muted by §6%EXECUTOR% §7for §c"%REASON%" §7for §c%TIME%'
+MUTE_MESSAGE: "§cYou are muted and can't use the chat."
 
 PLAYER_DOESNT_EXIST: "§cThis player does not exist."
