- MUTED_PLAYER_TRIED_TO_SPEAK implementation

--- a/src/main/resources/languages/LANG_GER.yml
+++ b/src/main/resources/languages/LANG_GER.yml
@@ -12,5 +12,6 @@ PLAYER_TEMPORARILY_BANNED: '§6%PLAYER% §7wurde von §6%EXECUTOR% §7gebannt we
 PLAYER_PERMANENTLY_MUTED: '§6%PLAYER% §7wurde von §6%EXECUTOR% §7gemuted wegen §c"%REASON%"'
 PLAYER_TEMPORARILY_MUTED: '§6%PLAYER% §7wurde von §6%EXECUTOR% §7gemuted wegen §c"%REASON%" §7für §c%TIME%'
 MUTE_MESSAGE: "§cDu bist gemuted und kannst den Chat nicht nutzen."
+MUTED_PLAYER_TRIED_TO_TALK: '§6%PLAYER% §7versuchte zu sprechen, ist aber gemuted!'
 
 PLAYER_DOESNT_EXIST: "§cDieser Spieler existiert nicht."
