--- a/src/main/resources/languages/LANG_ENG.yml
+++ b/src/main/resources/languages/LANG_ENG.yml
@@ -12,5 +12,6 @@ PLAYER_TEMPORARILY_BANNED: '§6%PLAYER% §7has been banned by §6%EXECUTOR% §7f
 PLAYER_PERMANENTLY_MUTED: '§6%PLAYER% §7has been muted by §6%EXECUTOR% §7for §c"%REASON%"'
 PLAYER_TEMPORARILY_MUTED: '§6%PLAYER% §7has been muted by §6%EXECUTOR% §7for §c"%REASON%" §7for §c%TIME%'
 MUTE_MESSAGE: "§cYou are muted and can't use the chat."
+MUTED_PLAYER_TRIED_TO_TALK: '§6%PLAYER% §7tried to talk, but they are muted!'
 
 PLAYER_DOESNT_EXIST: "§cThis player does not exist."
